# 01.homework_helloworld

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  lib.cpp  lib.h  main.cpp  test_version.cpp  version.h.in
.github/workflows/: pipeline.yml
